use user-secret to store the string

--- a/BuberDinner.Api/appsettings.Development.json
+++ b/BuberDinner.Api/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "JwtSettings": {
-    "Secret": "this is my custom Secret key for authentication",
+    "Secret": "",
     "ExpriyMinutes":60,
     "Issuer": "BuberDinner",
     "Audience": "BuberDinner"
